mobile responsiveness done.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="main">
         <div class="firsthalf">
             <div class="theLogo">
-                <img class="logo" src="./Logo.png" alt="the logo">
+                <img class="logo" src="./Logo.png" alt="the company logo">
             </div>
             <div class="theTexts">
                 <h2>For Individuals</h2>
